--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-#Папки с исполняемыми файлами
+п»ї#РџР°РїРєРё СЃ РёСЃРїРѕР»РЅСЏРµРјС‹РјРё С„Р°Р№Р»Р°РјРё
 Debug/
 
-#Релизные исполняемые файлы
+#Р РµР»РёР·РЅС‹Рµ РёСЃРїРѕР»РЅСЏРµРјС‹Рµ С„Р°Р№Р»С‹
 Release/*.exe
 
 #test changes1
